samples/_failures_safe/1761191989_7415ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b761ae44.c: In function ‘main’:
./samples/SAFE/__tmp_b761ae44.c:162:12: error: missing terminating " character
  162 |     printf("\nSecond matrix
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b761ae44.c:162:5: error: expected expression at end of input
  162 |     printf("\nSecond matrix
      |     ^~~~~~
./samples/SAFE/__tmp_b761ae44.c:162:5: error: expected declaration or statement at end of input
